--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,7 +9,39 @@
     <title>Trackapp</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+            </svg>
+            Trackapp
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="content">
+        <h1>Trackapp</h1>
+        <p>Trackapp is web application used to track user location and also used to navigate.</p>
+        <p>Click the button below to get started.</p>
+        <a class="btn" href="/map" role="button">Get Started</a>
+    </div>
+
+    <div class="img">
+        <img src="images/image1.jpeg" alt="an image" width="400" height="250">
+    </div>
 
 
 
@@ -17,9 +49,11 @@
 
 
 
-
-
-
+    <div class="footer-padding">
+        <div class="footer">
+            <p>Made by Ayodeji Obasan.</p>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
