--- a/views/map.ejs
+++ b/views/map.ejs
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" type="text/css" href="css/map.css">
     <title>Map</title>
 </head>
 <body>
+        <h1 class="header">Map Displaying Location</h1>
+        <div id="map"></div>
     
+    
+    <script type="text/javascript" src="/js/config.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
