--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .footer {
-	position: absolute;
+	position: fixed;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
@@ -72,4 +72,5 @@ body {
 .img {
     display: inline-block;
     margin-left: 200px;
+    position: inherit;
 }
